<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MakingScreens</string>
    <string name="all_prescriptions">All Prescriptions</string>
    <string name="name">Name</string>
    <string name="adding_golakla">Adding Golakla</string>
    <string name="number">Number</string>
    <string name="this_number_is_registered_as_surmesh">This Number is registered as : Surmesh</string>
    <string name="you_can_choose_or_create_relatives_below">You can choose or create relatives below</string>
    <string name="or_change_the_above_number">Or Change the above Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_relation">Create Relation</string>
    <string name="choose_relation">Choose Relation</string>
    <string name="golakla_is">Golakla is</string>
    <string name="brother">Brother</string>
    <string name="of_vishal_gupta">Of Vishal Gupta</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="check_in_to_create_prescription">Check in to create prescription</string>
    <string name="son">Son</string>
    <string name="ramila">Ramila</string>
    <string name="suresh">Suresh</string>
    <string name="jignesh">Jignesh</string>
    <string name="ramanlal">Ramanlal</string>
    <string name="chunni">Chunni</string>
    <string name="jigna">Jigna</string>
    <string name="daughter">Daughter</string>
    <string name="reviews">REVIEWS</string>
    <string name="name_surname">Name Surname</string>
    <string name="dated">Dated</string>
    <string name="_3">3</string>
    <string name="text">Lorem Ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
    veniam , quis nostrud exercitation ullamco laboris nisi ut</string>
    <string name="where_are_you_going">WHERE ARE YOU GOING</string>
    <string name="from">FROM</string>
    <string name="raipur">RAIPUR</string>
    <string name="_07_30_am">07:30 AM</string>
    <string name="to">TO</string>
    <string name="nagpur">NAGPUR</string>
    <string name="_04_20_pm">04:20 PM</string>
    <string name="boarding_point">BOARDING POINT</string>
    <string name="dropping_point">DROPPING POINT</string>
    <string name="button_continue">Continue</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="cancel_ticket_name">NAME</string>
    <string name="female_24_years">Female, 24 Years</string>
    <string name="cancel_raipur">RAIPUR</string>
    <string name="cancel_nagpur">NAGPUR</string>
    <string name="cancel_your_ticket">CANCEL YOUR TICKET</string>
    <string name="bus_details">Bus Details</string>
    <string name="royal_travels">ROYAL TRAVELS</string>
    <string name="volvo_multi_axle_a_c_sleeper">Volvo Multi - Axle A/C Sleeper</string>
    <string name="a_c_sleeper_2_1">A/C Sleeper (2+1)</string>
    <string name="a2_a3">A2,A3</string>
    <string name="cancel_boarding_point">Boarding Point</string>
    <string name="location">Location</string>
    <string name="cancel_ticket_dropping_point">Dropping Point</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="_11_feb_2021">11 FEB 2021</string>
    <string name="seat">Seat</string>
    <string name="male_25_years">Male, 25 Years</string>
    <string name="base_fare">Base Fare</string>
    <string name="u20b9_590_00">₹ 590.00</string>
    <string name="gst">GST</string>
    <string name="u20b9_20_00">₹ 20.00</string>
    <string name="total">TOTAL</string>
    <string name="u20b9_610_00">₹ 610.00</string>
    <string name="pay">PAY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="check_male">Male</string>
    <string name="select_female">Female</string>
    <string name="subscribe_news_letter">Subscribe News Letter</string>
    <string name="with_children">With children</string>
    <string name="register">Register</string>
    <string name="current_booking">CURRENT BOOKING</string>
    <string name="my_bookings">MY BOOKINGS</string>
    <string name="you_arrived">YOU ARRIVED</string>
    <string name="journey">JOURNEY</string>
    <string name="text_raipur">RAIPUR</string>
    <string name="text_nagpur">NAGPUR</string>
    <string name="how_is_your_journey">HOW IS YOUR JOURNEY</string>
    <string name="your_feedback_will_help_us_improve_driving_experience_better">Your feedback will help us improve driving experience better.</string>
    <string name="you_rated_2_5_stars">You rated 2.5 stars</string>
    <string name="say_something_about_our_service">Say something about our service?</string>
    <string name="submit">SUBMIT</string>
    <string name="examination_golakla">Examination - Golakla</string>
    <string name="observation">Observation:</string>
    <string name="cough_fever">Cough ; Fever</string>
    <string name="issue_symptom">Issue/Symptom:</string>
    <string name="runny_nose_temperature">Runny nose ; Temperature</string>
    <string name="need_to_prescribe_medication_and_take_rest">Need to prescribe medication and take rest.</string>
    <string name="medical_diagnosis">Medical Diagnosis:</string>
    <string name="save">Save</string>
    <string name="current_examination">Current examination</string>
    <string name="previous_examination">Previous examination</string>
    <string name="dr_mahendra_rana">Dr Mahendra Rana</string>
    <string name="_28_02_20_06_11_pm">28-02-20 ; 06:11 pm</string>
    <string name="mediacal_diagnosis_second">Medical Diagnosis</string>
    <string name="shrikant_mathur_s_infection_rate_is_increasing_need_to_assign_new_prescription" tools:ignore="StringEscaping">Shrikant Mathur's infection rate is increasing. Need to assign new prescription</string>
    <string name="symptoms">Symptoms</string>
    <string name="fever_cold_rash">Fever, Cold, Rash</string>
    <string name="observations">Observations</string>
    <string name="patient_summary">Patient Summary:</string>
    <string name="chirag_shah">Chirag Shah</string>
    <string name="last_appointment_on_07_12_20_06_18_pm">Last Appointment on: 07-12-20;06:18 pm</string>
    <string name="prescription_medication_on_07_12_20_07_00_pm">Prescription medication on: 07-12-20;07:00 pm</string>
    <string name="_45_yrs">45 yrs</string>
    <string name="chirag_s_sugar_level_is_high_as_per_last_reading" tools:ignore="StringEscaping">Chirag's Sugar Level is High as per last reading</string>
    <string name="all_tests_are_completed_and_prescription_is_active">All tests are completed and Prescription is active</string>
    <string name="update_prescription">Update Prescription</string>
    <string name="examination">Examination</string>
    <string name="medication">Medication</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="instruction">Instruction</string>
    <string name="_80">80</string>
    <string name="bpm">bpm</string>
    <string name="heart">Heart</string>
    <string name="rate">Rate</string>
    <string name="sugar">Sugar</string>
    <string name="level">Level</string>
    <string name="_15">15</string>
    <string name="mg_dl">mg/dL</string>
    <string name="blood">Blood</string>
    <string name="pressure">Pressure</string>
    <string name="_120_80">120/80</string>
    <string name="mmhg">mmHg</string>
    <string name="spo2">SpO2</string>
    <string name="_95">95</string>
    <string name="percent">Percent</string>
    <string name="connect_your_device">Connect your device</string>
    <string name="continue_disconnected">Continue Disconnected</string>
    <string name="follow_up_golakla">Follow up - Golakla</string>
    <string name="with_dr_mahendra_rana">with Dr Mahendra Rana</string>
    <string name="_10_04_21_12_30_pm">10-04-21 ; 12:30 PM</string>
    <string name="follow_up_at">Follow up at:</string>
    <string name="ctm_clinic_near_c_mall_ahmedabad">CTM Clinic, Near C Mall, Ahmedabad</string>
    <string name="reschedule_follow_up">Reschedule Follow Up</string>
    <string name="cancel_follow_up">Cancel Follow Up</string>
    <string name="scheduled_follow_up">Scheduled Follow Up</string>
</resources>