<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApiCalling">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullName"
        android:hint="@string/full_name"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGender"
            android:text="@string/gender"
            android:textSize="@dimen/_16ssp"
            android:layout_margin="@dimen/_20sdp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_male"
                android:id="@+id/selectMale"
                android:button="@drawable/custom_radio_button"
                android:checked="true"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:button="@drawable/custom_radio_button"
                android:id="@+id/selectFemale"/>

        </RadioGroup>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/subscribe_news_letter"
        android:layout_marginLeft="@dimen/_20sdp"
        android:button="@drawable/custom_checkbox"
        android:checked="true"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/withChildren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/with_children"
        android:textAlignment="textStart"
        app:switchPadding="@dimen/_150sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:gravity="start" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:background="@drawable/custom_pink_button"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/responseText"
        android:text="data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"/>

</LinearLayout>