<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_booking"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textCurrentBooking"
        android:textColor="@color/red_home"
        android:textSize="@dimen/_16ssp"
        android:layout_marginLeft="@dimen/_30sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textCurrentBooking"
        app:layout_constraintBottom_toBottomOf="@id/textCurrentBooking"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:id="@+id/textDated"
        android:textSize="@dimen/_10ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_07_30_am"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/textCurrentBooking"
        app:layout_constraintTop_toBottomOf="@id/textCurrentBooking"
        app:layout_constraintBottom_toTopOf="@id/textTicketCancelStart"
        app:layout_constraintEnd_toStartOf="@id/arrow"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/textTimeStartCancelTicket"
        android:textSize="@dimen/_10ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_raipur"
        app:layout_constraintBottom_toBottomOf="@id/arrow"
        app:layout_constraintStart_toStartOf="@id/textTimeStartCancelTicket"
        app:layout_constraintTop_toBottomOf="@id/textTimeStartCancelTicket"
        android:id="@+id/textTicketCancelStart"
        android:textSize="@dimen/_14ssp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_04_20_pm"
        app:layout_constraintStart_toEndOf="@id/arrow"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@id/arrow"
        app:layout_constraintBottom_toTopOf="@id/textTicketCancelEnd"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/textTimeEndCancelTicket"
        android:textSize="@dimen/_10ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_nagpur"
        app:layout_constraintTop_toBottomOf="@id/textTimeEndCancelTicket"
        app:layout_constraintBottom_toBottomOf="@id/arrow"
        app:layout_constraintEnd_toEndOf="@id/textTimeEndCancelTicket"
        android:id="@+id/textTicketCancelEnd"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toEndOf="@id/textTimeStartCancelTicket"
        app:layout_constraintTop_toTopOf="@id/textTimeStartCancelTicket"
        app:layout_constraintBottom_toBottomOf="@id/textTicketCancelStart"
        app:layout_constraintEnd_toStartOf="@id/textTimeEndCancelTicket"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_20sdp"
        android:id="@+id/busIcon"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/bus"
        app:layout_constraintStart_toStartOf="@id/textTicketCancelStart"
        app:layout_constraintTop_toBottomOf="@id/textTicketCancelStart"
        app:layout_constraintEnd_toStartOf="@id/textBusName"
        app:layout_constraintBottom_toTopOf="@id/textBusType"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/royal_travels"
        app:layout_constraintStart_toEndOf="@id/busIcon"
        app:layout_constraintTop_toTopOf="@id/busIcon"
        app:layout_constraintBottom_toBottomOf="@id/busIcon"
        android:id="@+id/textBusName"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volvo_multi_axle_a_c_sleeper"
        app:layout_constraintStart_toStartOf="@id/busIcon"
        app:layout_constraintTop_toBottomOf="@id/textBusName"
        android:id="@+id/textBusType"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_c_sleeper_2_1"
        app:layout_constraintEnd_toStartOf="@id/textSeatTypeDetails"
        app:layout_constraintStart_toStartOf="@id/textBusType"
        app:layout_constraintTop_toBottomOf="@id/textBusType"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/textSeatType"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a2_a3"
        app:layout_constraintStart_toEndOf="@id/textSeatType"
        app:layout_constraintTop_toTopOf="@id/textSeatType"
        app:layout_constraintBottom_toBottomOf="@id/textSeatType"
        app:layout_constraintEnd_toEndOf="@id/textTicketCancelEnd"
        android:id="@+id/textSeatTypeDetails"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/white_grey"
        app:layout_constraintStart_toStartOf="@id/textSeatType"
        app:layout_constraintTop_toBottomOf="@id/textSeatType"
        app:layout_constraintEnd_toEndOf="@id/textSeatTypeDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>